--- a/views/loanFormSubmit.handlebars
+++ b/views/loanFormSubmit.handlebars
@@ -57,7 +57,7 @@
                   text-align: left;
                   padding: 0;
                 ">
-                            Dear {{name}},
+                            Dear <span style="font-weight: 700;">{{name}}</span> ,
                         </td>
                     </tr>
                     <tr height="10">
@@ -74,7 +74,7 @@
                   text-align: left;
                   padding: 0;
                 ">
-                            We have received your loan application for '{{loanName}}' submitted on {{applyingDate}}.
+                            We have received your loan application for <span style="font-weight: 700;">'{{loanName}}'</span> submitted on <span style="font-weight: 700;">{{applyingDate}}</span>. Your Loan ID <span style="font-weight: 700;">{{loanId}}</span>
                             Thank you for choosing our services.
                         </td>
                     </tr>
@@ -177,17 +177,34 @@
                         <td></td>
                     </tr>
                     <tr>
-                        <td style="
-                  box-sizing: border-box;
-                  color: #050f2f;
-                  text-decoration: none;
-                  font-family: Arial, Helvetica, sans-serif;
-                  font-size: inherit;
-                  line-height: inherit;
-                  text-align: left;
-                  padding: 0;
-                ">
-                            &copy; All Rights Reserved
+                        <td>
+                            <table width="100%" cellspacing="0" cellpadding="0" border="0"
+                                style="background-color: #333743">
+                                <tr>
+                                    <td>
+                                        <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                                            <tr height="10">
+                                                <td></td>
+                                            </tr>
+                                            <tr height="8" style="color: white;
+                                                display: flex;
+                                        justify-content: center;
+                                        align-items: center;
+                                                ">
+                                                <td style="color: white;
+                                                display: flex;
+                                        justify-content: center;
+                                        align-items: center;
+                                                "> &copy; All Rights Reserve</td>
+                                            </tr>
+                                            <tr height="10">
+                                                <td></td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                    <td width="41"></td>
+                                </tr>
+                            </table>
                         </td>
                     </tr>
 
